fix iframe overflow

--- a/src/css/darkTheme.css
+++ b/src/css/darkTheme.css
@@ -1,3 +1,13 @@
 .markdown-section td {
     background: #3F3F3F;
 }
+.video-player{
+    margin:1.2rem;
+    padding:1rem;
+    
+}
+.video-player iframe{
+    width:100%;
+    aspect-ratio:17/9;
+    border:2px solid black;
+}
